--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
             <span class="post-list__meta--tags-right">{{ post.tags }}</span>
           </div>
           <div class = "post-list-small-mate">
-          <a class="btn-border-small" href={{ post.url }}>Read whole content » </a>
+          <a class="btn-border-small" href={{ post.url }}>Read more » </a>
           </div>
       </div>
       <hr class="post-list__divider" />
