--- a/Ruby/index.html
+++ b/Ruby/index.html
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">P</h2>
+    	<h2 style="color:#F2B300;">Z</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">H</h2>
+    	<h2 style="color:#0719D4;">E</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">Y</h2>
+    	<h2 style="color:#D14D39;">N</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">L</h2>
+    	<h2 style="color:#8FAD00;">X</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">L</h2>
+    	<h2 style="color:#8377E4;">U</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">I</h2>
+    	<h2 style="color:#99C96A;">A</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">S</h2>
+    	<h2 style="color:#20CFB4;">N</h2>
 	</div>
 	<!-- <div class="balloons text-center" id="b8">
 		<h2 style="color:#EBF510;">A</h2>
@@ -124,7 +124,7 @@
 				<p>I made all this...</p>
 				<p>as a birthday present to you</p>
 				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
+				<p>thanks for the <strong><font color="red">LOVE </font></strong>we made</p>
 				<p>thanks for everything</p>
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
@@ -153,7 +153,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Phyllis</p>
+				<p>a very happy birthday <strong><font color="red"> L P </font></strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -167,6 +167,7 @@
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="photo">Our memeory</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
