--- a/Ruby/index.html
+++ b/Ruby/index.html
@@ -153,7 +153,9 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday <strong><font color="red"> L P </font></strong></p>
+				<p>a very happy birthday</p>
+				<p>AND</p>
+				<p><strong><font color="red">I LOVE YOU MY SWEETIE</font></strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
