--- a/Ruby/index.html
+++ b/Ruby/index.html
@@ -45,20 +45,20 @@
     	<h2 style="color:#D14D39;">N</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">G</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">U</h2>
+    	<h2 style="color:#8377E4;">X</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">A</h2>
+    	<h2 style="color:#99C96A;">U</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">N</h2>
+    	<h2 style="color:#20CFB4;">A</h2>
 	</div>
-	<!-- <div class="balloons text-center" id="b8">
-		<h2 style="color:#EBF510;">A</h2>
-    </div> -->
+	<div class="balloons text-center" id="b8">
+		<h2 style="color:#EBF510;">N</h2>
+    </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
@@ -155,7 +155,7 @@
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday</p>
 				<p>AND</p>
-				<p><strong><font color="red">I LOVE YOU MY SWEETIE</font></strong></p>
+				<p><strong><font color="red">I LOVE YOU MY LP &#128143;</font></strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
