--- a/Ruby/index.html
+++ b/Ruby/index.html
@@ -158,6 +158,20 @@
 				<p><strong><font color="red">I LOVE YOU MY LP &#128143;</font></strong></p>
 			</div>
 		</div>
+		<div class="row image">
+			<div class="col-md-12 text-center">
+				<img class="pic pic1"  src="./image/IMG_01.JPG">
+				<img class="pic pic2"  src="./image/IMG_02.JPG">
+				<img class="pic pic3"  src="./image/IMG_03.JPG">
+				<img class="pic pic4"  src="./image/IMG_04.JPG">
+				<img class="pic pic5"  src="./image/IMG_05.JPG">
+				<img class="pic pic6"  src="./image/IMG_06.jpeg">
+				<img class="pic pic7"  src="./image/IMG_07.jpeg">
+				<img class="pic pic8"  src="./image/IMG_08.jpeg">
+				<img class="pic pic9"  src="./image/IMG_09.jpeg">
+				<img class="pic pic10" src="./image/IMG_10.jpeg">
+			</div>		
+		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
