--- a/Chloe/index.html
+++ b/Chloe/index.html
@@ -177,7 +177,7 @@
 				<img class="pic pic5" src="./image/IMG_6144.JPG">
 				<img class="pic pic6" src="./image/IMG_6277.JPG">
 				<img class="pic pic7" src="./image/IMG_6791.PNG">
-				<img class="pic pic8" src="./image/melon-1.JPG">
+				<img class="pic pic8" src="./image/melon-1.jpg">
 				<img class="pic pic9" src="./image/IMG_6796.PNG">
 				<img class="pic pic10" src="./image/melon-2.JPG">
 			</div>
